# MCP-Scooter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  coverage  dev.ps1  go.mod  go.sum  install.ps1  package.json  tasks.ps1
.cursor/commands/: create-mcp.md  test-agent.md  test-mcp.md
.cursor/plans/: agent_testing_framework_d9260e0f.plan.md  cli_implementation_phase_734c8f45.plan.md  scooter_call_wrapper_tool_1bdd116e.plan.md  secure_mcp_scooter_api_f78a2f43.plan.md  verbose_mcp_logging_c722bb20.plan.md
.cursor/rules/: mcp-registry.mdc  project.mdc
.cursor/workflows/: create-mcp.md  test-mcp.md
.doc/: mcp-registry-specification.md  prd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  mcp_registry.md
.github/workflows/: deploy-web.yml  release.yml
.opencode/commands/: create-mcp.md  test-mcp.md
.opencode/rules/: mcp-registry.mdc  mcp-testing.mdc  project.mdc
appdata/clients/: claude-code.json  claude-desktop.json  cursor.json  gemini-cli.json  vscode.json  zed.json
appdata/registry/: brave-search.json  context7.json  github.json  jira-mcp.json  linear-mcp.json  postgres-mcp.json  test-tool.json
appdata/schemas/: mcp-registry.schema.json  skill.schema.json
appdata/wasm/: test-tool.wasm
cmd/scooter/: main.go  main_test.go
cmd/scooter-cli/: main.go
cmd/validate-registry/: main.go  main_test.go
desktop/: index.html  package-lock.json  package.json
desktop/scripts/: check_contrast.js
desktop/src/: App.css  App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docker-reverse/: FINDINGS.md  README.md  challenges.md  cursor-mcp-config.json  manual-test-log.jsonl  manual-test.js  mcp-logger.js  mcp-protocol-log.jsonl
docs/: README.md  architecture.md  releasing.md
internal/api/: mcp.go  server.go  server_test.go
internal/logger/: logger.go
test-tool/: main.go
tests/: README.md  go.mod  requirements.txt
tests/evaluation/: openrouter_client.py  run_evaluation.py  scenarios.yaml  scooter_eval.xml
tests/fixtures/: mock_mcp_server.go
tests/protocol/: client.go  client_test.go
tests/results/: scenario_report_20260122_193244.md  scenario_report_20260123_123008.md  scenario_report_20260123_123235.md  scenario_report_20260123_123318.md  scenario_report_20260123_123405.md  scenario_report_20260123_123453.md  scenario_report_20260123_123539.md  scenario_report_20260123_123624.md  scenario_report_20260123_123658.md  scenario_report_20260123_123731.md  scenario_report_20260123_123825.md  scenario_report_20260123_124107.md  scenario_report_20260123_130507.md  scenario_report_20260123_130641.md  scenario_report_20260123_130728.md  scenario_report_20260123_161427.md  scenario_report_20260125_142510.md  scenario_report_20260125_143018.md  scenario_report_20260125_143133.md  scenario_report_20260125_143615.md  scenario_results_20260122_193221.json  scenario_results_20260122_193244.json  scenario_results_20260123_123008.json  scenario_results_20260123_123235.json  scenario_results_20260123_123318.json  scenario_results_20260123_123405.json  scenario_results_20260123_123453.json  (+14 more)
tests/scenarios/: runner.go  (+1 more)
web/: index.html
(+59 files in other folders)
